# cxx-sdl-2D-engine

./: .clang-format  .gitignore  notes.md
asesprite/: arrlr.aseprite  start-button.aseprite  swoop and heart.aseprite
include/: Actor.h  Character.h  Engine.h  FlippyState.h  Fuck.h  LogHandler.h  MessageBus.h  Renderer.h  SDLHandler.h  Sprite.h  State.h  Ui.h  Vec2.h  WelpState.h
include/actors/: Arrow.h  Button.h  Character.h  Shield.h
include/engine/: Actor.h  AnimatedActor.h  AnimatedSprite.h  Animation.h  Animator.h  Camera.h  Character.h  Engine.h  Err.h  Input.h  Layer.h  Renderer.h  SDLHandler.h  Scene.h  Sprite.h  State.h  TileAtlas.h  TileMap.h  Ui.h  Vec2.h
include/states/: MenuState.h  PlayState.h
src/: Actor.cpp  CMakeLists.txt  Character.cpp  Engine.cpp  Err.cpp  FlippyState.cpp  Fuck.cpp  Main.cpp  MessageBus.cpp  OldMain.cpp  Renderer.cpp  SDLHandler.cpp  Sprite.cpp  State.cpp  Ui.cpp  Vec2.cpp  WelpState.cpp
src/actors/: Arrow.cpp  Button.cpp  Character.cpp  Shield.cpp
src/engine/: Actor.cpp  AnimatedActor.cpp  AnimatedSprite.cpp  Animation.cpp  Animator.cpp  Camera.cpp  Engine.cpp  Input.cpp  Layer.cpp  LogHandler.cpp  Renderer.cpp  Scene.cpp  Sprite.cpp  State.cpp  TileAtlas.cpp  TileMap.cpp  Ui.cpp  Vec2.cpp
src/saved-for-later/: ChangeStateMessage.cpp  ChangeStateMessage.h  Message.h  MessageBus.cpp  MessageBus.h
src/states/: MenuState.cpp  PlayState.cpp
